# norf

./: CMakeLists.txt
cmake/: FindENET.cmake
src/: CMakeLists.txt  main.cpp
